--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     app: hello-kenzan
     tier: hello-kenzan
-  type: NodePort
+  type: LoadBalancer
 
 ---
 apiVersion: apps/v1
