--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -1,41 +1,41 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-kenzan
+  name: bend
   labels:
-    app: hello-kenzan
+    app: bend
 spec:
   ports:
-    - port: 90
-      targetPort: 90
+    - port: 70
+      targetPort: 70
+      protocol: TCP
+      name: http
   selector:
-    app: hello-kenzan
-    tier: hello-kenzan
+    app: bend
+
   type: LoadBalancer
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-kenzan
-  labels:
-    app: hello-kenzan
+  name: bend
 spec:
+  replicas: 1
   selector:
-    matchLabels:
-      app: hello-kenzan
-      tier: hello-kenzan
-  strategy:
-    type: Recreate
+    matchLabels:        
+      run: bend
   template:
     metadata:
       labels:
-        app: hello-kenzan
-        tier: hello-kenzan
+        run: bend
     spec:
       containers:
-      - image: bendevet/milan:latest
-        name: hello-kenzan
+      - name: bend
+        image: bendevet/milan:latest
         ports:
-        - containerPort: 90
-          name: hello-kenzan
+        - containerPort: 70
+
+
+
+        # bendevet/intimacyng:v12
