--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: milan
-        image: milanevet/milan:latest
+        image: bendevet/milan:latest
           # milanevet/milan:latest
         ports:
         - containerPort: 80
